<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phantom_touch_description</name>
  <version>0.0.1</version>
  <description>Phantom Touch 3DSystems Robot description</description>
  <maintainer email="ermano.arruda@gmail.com">Ermano Arruda</maintainer>
  <license>proprietary</license>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
